sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: reassignment to val
		stop = true;
                     ^AlgBubbleSort1:9: error: not found: value j
				echange(i,j);
                                          ^AlgBubbleSort1:10: error: reassignment to val
				stop = false;
                                     ^