sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {

	val stop : Boolean = false;
	do{
		stop = true;
		for (i <- 0 to getNombreValeurs()-2){
			if (plusPetit(getValeur(i+1), getValeur(i))){
				echange(i,j);
				stop = false;
			}
		}
	}while(!stop)

}